--- a/data/htm/2012_S_basics_korean.htm
+++ b/data/htm/2012_S_basics_korean.htm
@@ -521,9 +521,48 @@
 <td class="pstyle2">대학국어&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">43-1-403&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.001&nbsp;</td>
+<td class="pstyle2">010&nbsp;</td>
+<td class="pstyle2">대학국어&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">화&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">43-1-403&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.001&nbsp;</td>
+<td class="pstyle2">010&nbsp;</td>
+<td class="pstyle2">대학국어&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">43-1-403&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.001&nbsp;</td>
+<td class="pstyle2">010&nbsp;</td>
+<td class="pstyle2">대학국어&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">43-1-403&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
