--- a/data/htm/2012_S_basics_science.htm
+++ b/data/htm/2012_S_basics_science.htm
@@ -340,7 +340,7 @@
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">금&nbsp;1,2,3,4&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">44-1-206&nbsp;</td>
 <td class="pstyle2">조인순&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
@@ -379,7 +379,7 @@
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">금&nbsp;1,2,3,4&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">302-311-1&nbsp;</td>
 <td class="pstyle2">정임영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
