--- a/data/htm/2012_S_basics_all.htm
+++ b/data/htm/2012_S_basics_all.htm
@@ -521,9 +521,48 @@
 <td class="pstyle2">대학국어&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">43-1-403&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.001&nbsp;</td>
+<td class="pstyle2">010&nbsp;</td>
+<td class="pstyle2">대학국어&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">화&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">43-1-403&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.001&nbsp;</td>
+<td class="pstyle2">010&nbsp;</td>
+<td class="pstyle2">대학국어&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">43-1-403&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.001&nbsp;</td>
+<td class="pstyle2">010&nbsp;</td>
+<td class="pstyle2">대학국어&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-2-2&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">43-1-403&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1691,9 +1730,35 @@
 <td class="pstyle2">한국기초한문&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.013&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">한국기초한문&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.013&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">한국기초한문&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -2484,9 +2549,35 @@
 <td class="pstyle2">힌디어와 인도문화 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">나라연&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.061C&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">힌디어와 인도문화 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">나라연&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.061C&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">힌디어와 인도문화 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
 <td class="pstyle2">나라연&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -2770,9 +2861,35 @@
 <td class="pstyle2">논리와 비판적 사고&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-202&nbsp;</td>
+<td class="pstyle2">이영환&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.083&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">논리와 비판적 사고&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-202&nbsp;</td>
+<td class="pstyle2">이영환&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.083&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">논리와 비판적 사고&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-202&nbsp;</td>
 <td class="pstyle2">이영환&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -2783,9 +2900,35 @@
 <td class="pstyle2">논리와 비판적 사고&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-202&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.083&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">논리와 비판적 사고&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-202&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.083&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">논리와 비판적 사고&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">007-202&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -2796,9 +2939,35 @@
 <td class="pstyle2">논리학&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
+<td class="pstyle2">노호진&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.084&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">논리학&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
+<td class="pstyle2">노호진&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.084&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">논리학&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
 <td class="pstyle2">노호진&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -3291,7 +3460,7 @@
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">금&nbsp;1,2,3,4&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">44-1-206&nbsp;</td>
 <td class="pstyle2">조인순&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
@@ -3330,7 +3499,7 @@
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">금&nbsp;1,2,3,4&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">302-311-1&nbsp;</td>
 <td class="pstyle2">정임영&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
