--- a/timetable.htm
+++ b/timetable.htm
@@ -315,9 +315,6 @@
 					</table>
 				</div>
 
-				<div id="footer">
-				</div>
-
 			</div>
 			<div id="export_wrapper">
 				<h3>이미지 내보내기</h3>
@@ -332,6 +329,16 @@
 					</p>
 				</div>
 			</div>
+
+			<div id="footer">
+				<p>
+				Developed by <a href="http://www.facebook.com/jongmin.rok" target="_blank">Jongmin</a> in <a href="http://www.wafflestudio.com" target="_blank">Wafflestudio</a>
+				</p>
+				<p>
+					<a href="mailto:secury@wafflestudio.com">secury@wafflestudio.com</a>
+				</p>
+			</div>
+
 		</div> <!-- /container -->
 
 		<!-- Le javascript
