--- a/timetable.htm
+++ b/timetable.htm
@@ -3,7 +3,7 @@
 	<head> 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>SNUTT</title> 
+		<title>서울대학교 시간표</title> 
 		<link href="/stylesheets/timetable.css" media="all" rel="stylesheet" type="text/css" /> 
 		<link href="/stylesheets/timetable.mobile.css" media="handheld, only screen and (max-device-width: 768px)" type="text/css" rel="stylesheet" />
 		<link href="/stylesheets/tinyscrollbar.css" media="all" rel="stylesheet" type="text/css" /> 
@@ -23,10 +23,35 @@
 		<script src="/javascripts/base64.js" type="text/javascript"></script> 
 	</head> 
 	<body ondragstart="return false" onselectstart="return false"> 
+		<!-- facebook test -->
+    <div id="fb-root"></div>
+    <script>
+      // Load the SDK Asynchronously
+      (function(d){
+         var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement('script'); js.id = id; js.async = true;
+         js.src = "//connect.facebook.net/ko_KR/all.js";
+         ref.parentNode.insertBefore(js, ref);
+       }(document));
+
+      // Init the SDK upon load
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '373200526066057', // App ID
+          channelUrl : '//'+window.location.hostname+'/channel', // Path to your Channel File
+          status     : true, // check login status
+          cookie     : true, // enable cookies to allow the server to access the session
+          xfbml      : true  // parse XFBML
+        });
+      } 
+    </script>
+
+		<!-- facebook test end -->
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
-					<a class="brand" href="#">SNUTT</a>
+					<a class="brand" href="#" id="brand_button">SNUTT</a>
 					<ul class="nav" id="main_navigation">
 						<li class="active"><a href="#search" id="nav_search_result" data-toggle="tab">검색결과</a></li>
 						<li><a href="#my_courses" data-toggle="tab" rel="tooltip" id="nav_my_courses">내 강의 <span class="badge badge-info" id="my_courses_credit">0학점</span></a></li>
@@ -55,7 +80,7 @@
 						<!-- 검색필터 버튼 -->
 						<a class="btn" id="search_filter_toggle_button" state="off">검색필터 <span class="caret"></span></a>
 
-						<div id="search_filter">
+						<div id="search_filter" style="display:none;">
 							<div class="search-filter-container" id="filter_basics">
 								<span class="header">학문의 기초</span>
 								<span class="label" value="basics_korean">국어와 작문</span>
@@ -324,8 +349,13 @@
 				</div>
 				<div id="export_button">
 					<a href="#export_image" id="export_save_button" class="btn btn-danger" download="timetable.png">저장하기</a>
+					<a href="#publish_facebook" id="publish_facebook_toggle_button" class="btn btn-danger" state="off">페이스북에 공유하기 <span class="caret"></span></a>
+					<form id="facebook_message_wrapper" class="form-inline">
+						<input type="text" placeholder="담벼락에 게시될 메시지를 입력하세요." id="facebook_message" />
+						<button type="submit" id="publish_facebook_ok_button" class="btn">확인</button>
+					</form>
 					<p>
-					* 저장하기 버튼이 작동하지 않으면 위에 있는 그림을 [우클릭 -&gt; 다른이름으로 사진 저장]으로 직접 저장하세요.
+					* 저장하기 버튼이 작동하지 않으면 위에 있는 그림을 [우클릭 -&gt; 다른 이름으로 사진 저장]으로 직접 저장하세요.
 					</p>
 				</div>
 			</div>
@@ -335,11 +365,20 @@
 				Developed by <a href="http://www.facebook.com/jongmin.rok" target="_blank">Jongmin</a> in <a href="http://www.wafflestudio.com" target="_blank">Wafflestudio</a>
 				</p>
 				<p>
-					<a href="mailto:secury@wafflestudio.com">secury@wafflestudio.com</a>
+				<a href="mailto:secury@wafflestudio.com">secury@wafflestudio.com</a>
 				</p>
 			</div>
 
 		</div> <!-- /container -->
+
+		<div id="facebook_loading_modal">
+			<div id="facebook_loading_image">
+				<img src="/images/loading.gif" alt="facebook-loading" />
+			</div>
+			<p>
+			이미지를 등록중입니다. 잠시만 기다려주세요.
+			</p>
+		</div>
 
 		<!-- Le javascript
 		================================================== -->
