수강편람 업데이트 2012-S

--- a/data/htm/2012_S_normal_foreign.htm
+++ b/data/htm/2012_S_normal_foreign.htm
@@ -289,7 +289,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">   -    &nbsp;</td>
+<td class="pstyle2">003-115&nbsp;</td>
 <td class="pstyle2">조영실&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -302,7 +302,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">   -    &nbsp;</td>
+<td class="pstyle2">003-115&nbsp;</td>
 <td class="pstyle2">조영실&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -315,7 +315,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">   -    &nbsp;</td>
+<td class="pstyle2">003-115&nbsp;</td>
 <td class="pstyle2">조영실&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
