--- a/data/htm/2012_S_normal_special.htm
+++ b/data/htm/2012_S_normal_special.htm
@@ -183,9 +183,9 @@
 <td class="pstyle2">그린리더십 인턴십&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-0-6&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
+<td class="pstyle2">220-202&nbsp;</td>
 <td class="pstyle2">신의항&nbsp;</td>
 <td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
