--- a/timetable.htm
+++ b/timetable.htm
@@ -3,7 +3,7 @@
 	<head> 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>서울대학교 시간표 - 2012 여름학기</title> 
+		<title>SNUTT - 2012 여름학기</title> 
 		<link href="/stylesheets/timetable.css" media="all" rel="stylesheet" type="text/css" /> 
 		<link href="/stylesheets/timetable.mobile.css" media="handheld, only screen and (max-device-width: 768px)" type="text/css" rel="stylesheet" />
 		<link href="/stylesheets/tinyscrollbar.css" media="all" rel="stylesheet" type="text/css" /> 
