--- a/timetable.htm
+++ b/timetable.htm
@@ -88,7 +88,7 @@
 								<li><a href="#" id="stype_course_number">교과목번호로 검색</a></li>
 							</ul>
 						</div>
-						<input type="text" class="input-medium" id="search_query_text" placeholder="예) 수및연" />
+						<input type="text" class="input-medium" id="search_query_text" placeholder="예) 컴개실" />
 						<button type="submit" class="btn">검색</button>
 
 						<!-- 검색필터 버튼 -->
