수강편람 업데이트

--- a/data/htm/2012_S_normal_art.htm
+++ b/data/htm/2012_S_normal_art.htm
@@ -57,7 +57,7 @@
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-103&nbsp;</td>
 <td class="pstyle2">이성희&nbsp;</td>
-<td class="pstyle2">60&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -70,7 +70,7 @@
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-103&nbsp;</td>
 <td class="pstyle2">이성희&nbsp;</td>
-<td class="pstyle2">60&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -83,7 +83,7 @@
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-103&nbsp;</td>
 <td class="pstyle2">이성희&nbsp;</td>
-<td class="pstyle2">60&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -131,11 +131,11 @@
 <td class="pstyle2">드라마의 이해와 감상&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">월&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">083-401&nbsp;</td>
 <td class="pstyle2">양근애&nbsp;</td>
-<td class="pstyle2">60&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -144,11 +144,11 @@
 <td class="pstyle2">드라마의 이해와 감상&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">083-401&nbsp;</td>
 <td class="pstyle2">양근애&nbsp;</td>
-<td class="pstyle2">60&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -157,11 +157,11 @@
 <td class="pstyle2">드라마의 이해와 감상&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-103&nbsp;</td>
+<td class="pstyle2">083-401&nbsp;</td>
 <td class="pstyle2">양근애&nbsp;</td>
-<td class="pstyle2">60&nbsp;</td>
+<td class="pstyle2">40&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -209,10 +209,10 @@
 <td class="pstyle2">언어와 인간&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">083-402&nbsp;</td>
+<td class="pstyle2">윤기덕&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -222,10 +222,10 @@
 <td class="pstyle2">언어와 인간&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">083-402&nbsp;</td>
+<td class="pstyle2">윤기덕&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -235,10 +235,10 @@
 <td class="pstyle2">언어와 인간&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">083-402&nbsp;</td>
+<td class="pstyle2">윤기덕&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -287,10 +287,10 @@
 <td class="pstyle2">러시아명작의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">083-401&nbsp;</td>
+<td class="pstyle2">박종소&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -300,10 +300,10 @@
 <td class="pstyle2">러시아명작의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">083-401&nbsp;</td>
+<td class="pstyle2">박종소&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -313,10 +313,10 @@
 <td class="pstyle2">러시아명작의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">083-401&nbsp;</td>
+<td class="pstyle2">박종소&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -703,9 +703,9 @@
 <td class="pstyle2">대중예술의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">2-2-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">월&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-101&nbsp;</td>
+<td class="pstyle2">009-106&nbsp;</td>
 <td class="pstyle2">계영경&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -716,9 +716,22 @@
 <td class="pstyle2">대중예술의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">2-2-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-101&nbsp;</td>
+<td class="pstyle2">009-106&nbsp;</td>
+<td class="pstyle2">계영경&nbsp;</td>
+<td class="pstyle2">50&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">003.074&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">대중예술의 이해&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">2-2-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">009-106&nbsp;</td>
 <td class="pstyle2">계영경&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
