--- a/data/htm/2012_S_basics_korean.htm
+++ b/data/htm/2012_S_basics_korean.htm
@@ -55,7 +55,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-207&nbsp;</td>
+<td class="pstyle2">001-102&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -68,7 +68,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">화&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-207&nbsp;</td>
+<td class="pstyle2">001-102&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -81,7 +81,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-207&nbsp;</td>
+<td class="pstyle2">001-102&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -94,7 +94,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">목&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-207&nbsp;</td>
+<td class="pstyle2">001-102&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -315,7 +315,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-207&nbsp;</td>
+<td class="pstyle2">003-105&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -328,7 +328,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">화&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-207&nbsp;</td>
+<td class="pstyle2">003-105&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -341,7 +341,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-207&nbsp;</td>
+<td class="pstyle2">003-105&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -354,7 +354,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">목&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-207&nbsp;</td>
+<td class="pstyle2">003-105&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -523,9 +523,9 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">43-1-403&nbsp;</td>
+<td class="pstyle2">014-101A&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">0&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -534,11 +534,11 @@
 <td class="pstyle2">대학국어&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">화&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">화&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">43-1-403&nbsp;</td>
+<td class="pstyle2">014-101A&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">0&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -549,9 +549,9 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">43-1-403&nbsp;</td>
+<td class="pstyle2">014-101A&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">0&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
@@ -560,11 +560,11 @@
 <td class="pstyle2">대학국어&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">목&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">43-1-403&nbsp;</td>
+<td class="pstyle2">014-101A&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">0&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
 <td class="pstyle2">1학년&nbsp;</td>
