--- a/data/htm/2012_S_core_art.htm
+++ b/data/htm/2012_S_core_art.htm
@@ -55,7 +55,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">   -    &nbsp;</td>
+<td class="pstyle2">083-604&nbsp;</td>
 <td class="pstyle2">김월회&nbsp;</td>
 <td class="pstyle2">150&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -68,7 +68,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">   -    &nbsp;</td>
+<td class="pstyle2">083-604&nbsp;</td>
 <td class="pstyle2">김월회&nbsp;</td>
 <td class="pstyle2">150&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -81,7 +81,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">   -    &nbsp;</td>
+<td class="pstyle2">083-604&nbsp;</td>
 <td class="pstyle2">김월회&nbsp;</td>
 <td class="pstyle2">150&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -131,9 +131,35 @@
 <td class="pstyle2">미국문화와 현대사회의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">005-107-1&nbsp;</td>
+<td class="pstyle2">정상준&nbsp;</td>
+<td class="pstyle2">60&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">023.025&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">미국문화와 현대사회의 이해&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">005-107-1&nbsp;</td>
+<td class="pstyle2">정상준&nbsp;</td>
+<td class="pstyle2">60&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">023.025&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">미국문화와 현대사회의 이해&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">005-107-1&nbsp;</td>
 <td class="pstyle2">정상준&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
