--- a/data/htm/2012_S_normal_history.htm
+++ b/data/htm/2012_S_normal_history.htm
@@ -898,9 +898,9 @@
 <td class="pstyle2">민족과 국민의 역사&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">월&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-106&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
 <td class="pstyle2">윤영휘&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -911,9 +911,9 @@
 <td class="pstyle2">민족과 국민의 역사&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">수&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-106&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
 <td class="pstyle2">윤영휘&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -924,9 +924,9 @@
 <td class="pstyle2">민족과 국민의 역사&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">007-106&nbsp;</td>
+<td class="pstyle2">009-110&nbsp;</td>
 <td class="pstyle2">윤영휘&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1290,7 +1290,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-506&nbsp;</td>
+<td class="pstyle2">43-1-402&nbsp;</td>
 <td class="pstyle2">최유경&nbsp;</td>
 <td class="pstyle2">160&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1303,7 +1303,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-506&nbsp;</td>
+<td class="pstyle2">43-1-402&nbsp;</td>
 <td class="pstyle2">최유경&nbsp;</td>
 <td class="pstyle2">160&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1316,7 +1316,7 @@
 <td class="pstyle2">3-3-0&nbsp;</td>
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">083-506&nbsp;</td>
+<td class="pstyle2">43-1-402&nbsp;</td>
 <td class="pstyle2">최유경&nbsp;</td>
 <td class="pstyle2">160&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
