--- a/data/htm/2012_S_normal_society.htm
+++ b/data/htm/2012_S_normal_society.htm
@@ -290,7 +290,7 @@
 <td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이종택&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -303,7 +303,7 @@
 <td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이종택&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -316,7 +316,7 @@
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이종택&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -329,7 +329,7 @@
 <td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이종택&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -342,7 +342,7 @@
 <td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이종택&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -355,7 +355,7 @@
 <td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이종택&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -368,7 +368,7 @@
 <td class="pstyle2">월&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박형생&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -381,7 +381,7 @@
 <td class="pstyle2">수&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박형생&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -394,7 +394,7 @@
 <td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">016-214&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박형생&nbsp;</td>
 <td class="pstyle2">100&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -755,9 +755,35 @@
 <td class="pstyle2">사상과 윤리&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">009-106&nbsp;</td>
+<td class="pstyle2">조주현&nbsp;</td>
+<td class="pstyle2">0&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">005.037A&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
+<td class="pstyle2">사상과 윤리&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">009-106&nbsp;</td>
+<td class="pstyle2">조주현&nbsp;</td>
+<td class="pstyle2">0&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">005.037A&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">사상과 윤리&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">009-106&nbsp;</td>
 <td class="pstyle2">조주현&nbsp;</td>
 <td class="pstyle2">0&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
